2003-07-24  Sam Steingold  <sds@gnu.org>

	* genclisph.d (SAFETY): export
	(type_data_object): fixed (now fixnum() works)
	(svector_): fixed (now TheSvector()->data works)
	(symbolp): uncommented
	(stringp): fixed
	(array_displace_check): replaces iarray_displace_check()
	* dirkey.c (SET-DKEY-VALUE): use array_displace_check() instead
	of iarray_displace_check(); many cosmetic tweaks

2003-07-23  Sam Steingold  <sds@gnu.org>

	Converted dirkey to a module
	* constobj.d, constpack.d, constsym.d, defs1.lisp, describe.lisp:
	* init.lisp, io.d, lispbibl.d, predtype.d, spvw.d, subr.d:
	* subrkw.d, type.lisp: removed dirkey-specific stuff
	* Makefile.devel (CONFIGURES): added dirkey, oracle, fastcgi
	* configure, makemake.in (--with-dir-key): removed option
	* encoding.d (cslen_f, cstombs_f): new functions that enable
	with_string_0() in modules
	* genclisph.d: enables a LOT of stuff to support dirkey
	* modules/dirkey: new directory

2003-07-23  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (reset): updated the prototype
	* eval.d (reset): accept count arg
	* control.d (UNWIND-TO-DRIVER): use reset() for everything
	* spvw_alloca.d (memfile): updated reset() call
	* spvw_allocate (error_speicher_voll): ditto
	* spvw.d (SP_ueber, STACK_ueber): ditto
	* error.d (INVOKE-DEBUGGER): ditto
	* debug.d (break_driver): ditto

2003-07-23  Sam Steingold  <sds@gnu.org>

	* record.d (fehler_record_length): fixed stack

2003-07-21  Sam Steingold  <sds@gnu.org>

	* _clisp.c (main): use shell_quote() and real_path()
	for CreateProcess()
	* w32shell.c: new file (extracted from pathname.d)
	* makemake.in (clisp) [WIN32_NATIVE]: put the icon into the
	executable; depend on w32shell.c
	(pathname.o) [WIN32_NATIVE]: depend on w32shell.c
	* pathname.d, spvw_memfile.d [WIN32_NATIVE]:
	renamed TrueName() to real_path()

2003-07-18  Sam Steingold  <sds@gnu.org>

	* condition.lisp (check-value): CONTINUE :INTERACTIVE
	ASSERT-RESTART-NO-PROMPTS to avoid infinite loops
